<resources>
    <string name="app_name">CourseAndroid</string>
    <string name="hint_text">Escribe tu nombre</string>
    <string name="text_button">Presioname</string>
    <string name="text_result_placeholder">resultado</string>
    <string name="text_hint_name">Escribe tu nombre</string>
    <string name="text_hint_last_name">Escribe tu apellido</string>
    <string name="text_title_second_activity">Segunda pantalla</string>
    <string name="label_button_2">Boton2</string>
    <string name="label_button_1">Boton 1</string>
    <string name="button_go_to_dbz">Ver lista de personajes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dbz_text_hint_name">Nombre del personaje</string>
    <string name="dbz_text_hint_race">Raza del personaje</string>
    <string name="dbz_text_power_level">Escribe el nivel de su poder</string>
    <string name="dbz_label_btn_save">Guardar</string>
    <string name="dbz_label_btn_cancel">Cancel</string>
    <string name="dbz_dialog_title">Crea tu personaje</string>
    <string name="dbz_text_hint_url_image">Escribe la url de la imagen</string>
</resources>