<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        android:background="@drawable/bg_round_corners">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dbz_dialog_title"
            android:textSize="@dimen/text_title"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:backgroundTint="@color/purple_500"
            android:hint="@string/dbz_text_hint_name"
            android:textSize="@dimen/text_subtitle" />

        <EditText
            android:id="@+id/et_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/dbz_text_hint_race"
            android:textSize="@dimen/text_subtitle" />

        <EditText
            android:id="@+id/et_power_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/dbz_text_power_level"
            android:inputType="number"
            android:textSize="@dimen/text_subtitle" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:padding="@dimen/spacing_small"
            android:text="@string/dbz_label_btn_save"
            android:textAllCaps="false"
            android:textSize="@dimen/text_body" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:backgroundTint="@color/teal_700"
            android:padding="@dimen/spacing_small"
            android:text="@string/dbz_label_btn_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/text_body" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>